testsuite/tests/interpreter_errors/block_expr_nonnull_expr/test.out
script.lkql:4:5: error: Can't ignore the return value of an expr in a block expr
  4 |     x + y;
    |     ^^^^^^
